--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -1,4 +1,5 @@
 @import url('./root.css');
+@import url('./dash_footer.css');
 
 * {
     margin: 0;
@@ -12,8 +13,8 @@ html, body {
     width: 100%;
     height: 100vh;
 
-    background: black;
-    color: white;
+    background: var(--bg-primary);
+    color: var(--text-primary);
 
     display: flex;
     justify-content: center;
@@ -25,14 +26,14 @@ html, body {
     padding: 15px;
 }
 
-.status {
+.container form {
     display: flex;
     justify-content: center;
     align-items:center;
     flex-direction: column;
 }
 
-.status h1:first-child {
+.container form h1:first-child {
     text-align: center;
     margin-bottom: 5px;
 }
@@ -59,19 +60,49 @@ html, body {
 }
 
 .avatar .avatarIcon {
-    width: 50px;
+    width: 75px;
     aspect-ratio: 1 / 1;
 
     border-radius: 50%;
+    border: .1px solid gray;
+    transition: 300ms ease;
+
+    object-fit: cover;
+}
+.avatar .avatarIcon:hover {
+    border: 1px solid var(--main-color);
+
 }
 
 .avatar .avatarName {
     position: fixed;
     right: var(--right-pos, -1000px); 
-    top: 50px;
+    top: 75px;
 
     transition: 400ms ease;
 }
 .avatar .avatarName.hover {
     --right-pos: 5px;
+}
+
+#avatarFile {
+  position: fixed;
+  top: -10000px;
+  left: -10000px;
+}
+
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+
+.f_views {
+  position: fixed;
+  width: 300px;
+  top: 5px;
+  left: 5px;
+
+  padding: 5px 5px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
