--- a/views/errors/withoutChar.ejs
+++ b/views/errors/withoutChar.ejs
@@ -87,11 +87,12 @@
           { name: 'Tamanho', value: 0 },
           { name: 'Constituição', value: 0 },
           { name: 'Educação', value: 0 },
-          { name: 'Movimento', value: 0 },
-          { name: 'Aparência', value: 0 }
+          { name: 'Aparência', value: 0 },
+          { name: 'Preparo', value: 0 }
         ],
         inventory: [],
         traumas: [],
+        expertise: [],
         hp: {value: 0, max: 0},
         sanity: {value: 0, max: 0}
       }
