--- a/public/dash_footer.css
+++ b/public/dash_footer.css
@@ -32,6 +32,9 @@
   backdrop-filter: blur(5px);
 
   margin: 0 5px;
+
+  cursor: pointer;
+  user-select: none;
   
 
   transition: background 300ms ease, transform 300ms ease;
