--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -24,6 +24,9 @@ html, body {
 .container {
     border: 1px solid var(--main-color);
     padding: 15px;
+    margin: 0 2.2rem;
+
+    min-width: 300px;
 }
 
 .container form {
@@ -49,6 +52,24 @@ html, body {
 
     color: var(--main-color);
     background: transparent;
+}
+
+#expertiseCreate {
+  margin-bottom: .75rem;
+}
+#expertiseCreate input {
+    outline: none;
+    text-align: center;
+    border-radius: 5px 15px 5px 15px;
+    border: 0.1px solid var(--main-color);
+
+}
+#expertiseCreate input:hover {
+    border: 1px solid var(--main-color);
+
+    box-shadow: 0px 0px 2.5px var(--main-color),
+    0px 1px 2.5px var(--main-color),
+    1px 0px 2.5px var(--main-color);
 }
 
 /**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**//**/
