--- a/public/pwt.css
+++ b/public/pwt.css
@@ -60,3 +60,26 @@
 .editable.progress_value::-webkit-inner-spin-button {
   display: none;
 }
+.editable.progress_max {
+  outline: none;
+  font-family: 'Poppins', 'Roboto', Arial, sans-serif;
+  appearance: none;
+
+  background: none; border: none;
+  color: #eee;
+
+  padding: 0;
+  margin: 0;
+
+  max-width: 40px;
+
+  font-size: 2rem;
+  font-weight: bold;
+
+  text-align: end;
+
+}
+.editable.progress_max::-webkit-inner-spin-button {
+  display: none;
+}
+
