--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <p class="alert"><p>Olá!</p><p>Parece que você não logou com o Discord!</p><p>Assim que logar poderemos disponibilizar as informações do seu Personagem, ou criar um!</p></p>
+    <p class="alertText"><p>Olá!</p><p>Parece que você não logou com o Discord!</p><p>Assim que logar poderemos disponibilizar as informações do seu Personagem, ou criar um!</p></p>
     <a href="/auth/discord" class="loginButton"><button>Logue-me!</button></a>
   </div>
 </body>
